기능 완성 nested routing, create post

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "react-remix-blog",
+  "name": "react-remix-techblog",
   "description": "",
   "license": "",
   "scripts": {
